--- a/style.css
+++ b/style.css
@@ -36,3 +36,13 @@ section#CellPhone {
     background: url(imagens/usaveis/frame-iphone.png) no-repeat;
     
 }
+
+iframe#tela{
+    position: relative;
+    left: 22px;
+    top: 80px;
+
+    width: 269px;
+    height: 471px;
+
+}
