--- a/style.css
+++ b/style.css
@@ -44,5 +44,23 @@ iframe#tela{
 
     width: 269px;
     height: 471px;
+}
 
+section#RedesSociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.582);
+    box-sizing: border-box;
+}
+
+section#RedesSociais{
+    text-align: right;
+}
+
+section#RedesSociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.541);
+    transform: translate(-3px, -3px);
+    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.534);
+    transition: transform 1s;
 }
