--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html,body {
 }
 
 body{
-    background: url(imagens/usaveis/fundo-madeira.jpg) no-repeat top center;
+    background: url(imagens/usaveis/photo-1550684376-efcbd6e3f031.avif) no-repeat top center;
 
     background-size: cover;
 
